syntax = "proto3";

option csharp_namespace = "GRPCDemo01Entity";

package Goods;

service Goodser {
  rpc GetGoods (QueryRequest) returns (QueryResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message QueryRequest {
  string name = 1;
}
message QueryResponse {
  string name = 1;
  int32 quantity=2;
}
message LoginRequest{
	string username=1;
	string password=2;
}
message LoginResponse{
    bool result=1;
    string message=2;
	string token=3;
}